--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.21",
     "moment": "2.25.3",
     "polished": "3.6.3",
+    "postcss-normalize": "~10.0.1",
     "prettier": "^2.3.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -46,7 +47,7 @@
     "react-jsonschema-form": "^1.8.1",
     "react-lottie-player": "^1.3.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "~5.0.0",
     "react-toastify": "^8.0.2",
     "react-use": "^17.1.1",
     "styled-components": "^5.3.0",
@@ -57,7 +58,8 @@
   "resolutions": {
     "**/react": "^17.0.2",
     "**/react-dom": "^17.0.2",
-    "@weaveworks/weave-gitops/react-router-dom": "^5.2.0"
+    "@weaveworks/weave-gitops/react-router-dom": "^5.2.0",
+    "mini-css-extract-plugin": "~2.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
